syntax = "proto3";

option csharp_namespace = "ChromaControl.Common.Protos.Settings";

package chromacontrol.settings;

import "google/protobuf/timestamp.proto";

service SettingsGrpc {
    rpc GetString(GetSettingRequest) returns (StringSettingResponse);
    rpc GetBool(GetSettingRequest) returns (BoolSettingResponse);
    rpc GetDateTime(GetSettingRequest) returns (DateTimeSettingResponse);
    rpc SetString(SetStringRequest) returns (EmptyMessage);
    rpc SetBool(SetBoolRequest) returns (EmptyMessage);
    rpc SetDateTime(SetDateTimeRequest) returns (EmptyMessage);
}

message EmptyMessage { }

message GetSettingRequest {
    string module = 1;
    string name = 2;
}

message StringSettingResponse {
    string value = 1;
}

message BoolSettingResponse {
    bool value = 1;
}

message DateTimeSettingResponse {
    google.protobuf.Timestamp value = 1;
}

message SetStringRequest {
    string module = 1;
    string name = 2;
    string value = 3;
}

message SetBoolRequest {
    string module = 1;
    string name = 2;
    bool value = 3;
}

message SetDateTimeRequest {
    string module = 1;
    string name = 2;
    google.protobuf.Timestamp value = 3;
}
